fixed dark mode text colors

--- a/src/modules/account/components/AccountDetails/WelcomeView/WelcomeView.css
+++ b/src/modules/account/components/AccountDetails/WelcomeView/WelcomeView.css
@@ -18,6 +18,7 @@
     flex-direction: column;
     align-items: center;
     text-align: center;
+    color: var(--color-black);
 
     & .logoContainer {
       display: flex;
@@ -59,6 +60,7 @@
 
   & .welcomeFooter {
     border-top: 1px solid var(--color-very-light-gray);
+    color: var(--color-black);
 
     padding: 40px 24px 0 24px;
 
